--- a/BioMFA_Mobile/app/src/main/res/values/themes.xml
+++ b/BioMFA_Mobile/app/src/main/res/values/themes.xml
@@ -1,9 +1,11 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
+
     <style name="Base.Theme.BioMFA" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="colorPrimary">@color/dark_gray</item> -->
+        <item name="colorSecondary">@color/light_gray</item> -->
     </style>
 
-    <style name="Theme.BioMFA" parent="Base.Theme.BioMFA" />
+    <style name="Theme.BioMFA" parent="Base.Theme.BioMFA">
+    </style>
+
 </resources>
