--- a/BioMFA_Mobile/app/src/main/res/layout/activity_main.xml
+++ b/BioMFA_Mobile/app/src/main/res/layout/activity_main.xml
@@ -23,11 +23,18 @@
             android:id="@+id/biomfa_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="sans-serif"
+            android:fontFamily="sans-serif-thin"
             android:text="@string/app_name"
             android:textColor="@color/black"
             android:textSize="48sp"
             android:textStyle="bold" />
+
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/biomfa_logo"
+            android:contentDescription="@string/biomfa_logo" />
 
         <Button
             android:id="@+id/qr_button"
@@ -36,7 +43,9 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="16dp"
             android:text="@string/scan_qr"
-            android:textColor="@color/white" />
+            android:textColor="@color/white"
+            android:textColorHighlight="@color/dark_gray"
+            android:backgroundTint="@color/dark_gray"/>
 
         <Button
             android:id="@+id/qr_code_button"
@@ -45,7 +54,9 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="8dp"
             android:text="@string/type_code"
-            android:textColor="@color/white" />
+            android:textColor="@color/white"
+            android:textColorHighlight="@color/dark_gray"
+            android:backgroundTint="@color/dark_gray" />
 
     </LinearLayout>
 
@@ -63,20 +74,13 @@
             android:id="@+id/toggle_button"
             style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_gravity="clip_horizontal"
+            android:layout_height="45dp"
+            android:layout_gravity="center_horizontal"
             android:layout_marginTop="2dp"
-            android:background="@color/light_gray"
+            android:background="@color/dark_gray"
             android:drawableTop="@drawable/arrow_up"
             android:fontFamily="sans-serif"
             android:gravity="center"
-            android:insetTop="0dp"
-            android:insetBottom="0dp"
-            android:textColor="@color/light_gray"
-            android:textColorHighlight="@color/light_gray"
-            android:textColorHint="@color/light_gray"
-            android:textColorLink="@color/light_gray"
-            app:iconTint="@color/light_gray"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -106,24 +110,6 @@
             app:backgroundTint="@color/light_gray"
             app:rippleColor="@color/black" />
 
-        <Switch
-            android:id="@+id/mode_switch"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="2dp"
-            android:height="60dp"
-            android:background="@color/light_gray"
-            android:checked="false"
-            android:fadingEdge="none"
-            android:fontFamily="sans-serif"
-            android:paddingLeft="40dp"
-            android:paddingRight="40dp"
-            android:showText="false"
-            android:switchTextAppearance="@style/TextAppearance.AppCompat.Body1"
-            android:text="@string/dark_mode"
-            android:textSize="24sp"
-            tools:ignore="UseSwitchCompatOrMaterialXml" />
-
         <Button
             android:id="@+id/app_info"
             style="@style/Widget.AppCompat.Button.Borderless"
@@ -150,8 +136,5 @@
             app:rippleColor="@color/black" />
 
     </LinearLayout>
-
-    <!-- Placeholder for the rest of the screen content -->
-    <!-- You can add your own content here -->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
