--- a/BioMFA_Mobile/app/src/main/res/values/colors.xml
+++ b/BioMFA_Mobile/app/src/main/res/values/colors.xml
@@ -4,5 +4,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="dark_gray">#363636</color>
     <color name="light_gray">#cfcfcf</color>
-    <color name="green">#9ebd8f</color>
+    <color name="green">#9cbc8c</color>
 </resources>
