--- a/BioMFA_Mobile/app/src/main/res/layout/activity_scan_rfid.xml
+++ b/BioMFA_Mobile/app/src/main/res/layout/activity_scan_rfid.xml
@@ -26,6 +26,7 @@
         android:text="@string/implant_message"
         android:textAlignment="center"
         android:textSize="20sp"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView3" />
