--- a/BioMFA_Mobile/app/src/main/res/values/themes.xml
+++ b/BioMFA_Mobile/app/src/main/res/values/themes.xml
@@ -1,12 +1,12 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 
     <style name="Base.Theme.BioMFA" parent="Theme.Material3.DayNight.NoActionBar">
-        <item name="colorPrimary">@color/dark_gray</item> -->
-        <item name="colorSecondary">@color/light_gray</item> -->
-        <item name="android:statusBarColor">@color/dark_gray</item>
+        <item name="colorPrimary">@color/dark_gray</item>
+        <item name="colorSecondary">@color/light_gray</item>
     </style>
 
     <style name="Theme.BioMFA" parent="Base.Theme.BioMFA">
+        <item name="android:statusBarColor">@android:color/transparent</item>
     </style>
 
 </resources>
