--- a/BioMFA_Mobile/app/src/main/res/layout/activity_main.xml
+++ b/BioMFA_Mobile/app/src/main/res/layout/activity_main.xml
@@ -1,139 +1,93 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/white"
-    android:orientation="vertical">
+                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
+                                                   android:layout_width="match_parent"
+                                                   android:layout_height="match_parent"
+                                                   android:background="@color/dark_gray"
+                                                   android:orientation="vertical">
 
     <LinearLayout
-        android:id="@+id/title_layout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="32dp"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toTopOf="@+id/menu_layout"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <TextView
-            android:id="@+id/biomfa_text"
+            android:id="@+id/title_layout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="sans-serif-thin"
-            android:text="@string/app_name"
-            android:textColor="@color/black"
-            android:textSize="48sp"
-            android:textStyle="bold" />
+            android:layout_gravity="center_horizontal"
+            android:orientation="vertical"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:background="@drawable/rounded_background"
+            android:padding="40dp">
+
+        <TextView
+                android:id="@+id/biomfa_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif-thin"
+                android:text="@string/app_name"
+                android:textColor="@color/black"
+                android:textSize="48sp"
+                android:textStyle="bold"/>
 
         <ImageView
-            android:id="@+id/imageView2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:srcCompat="@drawable/biomfa_logo"
-            android:contentDescription="@string/biomfa_logo" />
+                android:id="@+id/imageView2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/biomfa_logo"
+                android:contentDescription="@string/biomfa_logo"/>
 
         <Button
-            android:id="@+id/qr_button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="16dp"
-            android:text="@string/scan_qr"
-            android:textColor="@color/white"
-            android:textColorHighlight="@color/dark_gray"
-            android:backgroundTint="@color/dark_gray"/>
+                android:id="@+id/qr_button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="16dp"
+                android:text="@string/scan_qr"
+                android:textColor="@color/white"
+                android:textColorHighlight="@color/dark_gray"
+                android:backgroundTint="@color/dark_gray"/>
 
         <Button
-            android:id="@+id/qr_code_button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="8dp"
-            android:text="@string/type_code"
-            android:textColor="@color/white"
-            android:textColorHighlight="@color/dark_gray"
-            android:backgroundTint="@color/dark_gray" />
+                android:id="@+id/code_button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="8dp"
+                android:text="@string/type_code"
+                android:textColor="@color/white"
+                android:textColorHighlight="@color/dark_gray"
+                android:backgroundTint="@color/dark_gray"
+                android:onClick="openTypeCodeActivity"/>
 
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/menu_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:orientation="vertical"
-        android:visibility="visible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        tools:ignore="MissingConstraints">
+        <TextView
+                android:text="@string/line"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:id="@+id/textView2" android:paddingLeft="10dp"
+                android:paddingRight="10dp"/>
 
         <Button
-            android:id="@+id/toggle_button"
-            style="@style/Widget.AppCompat.Button.Borderless"
-            android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="2dp"
-            android:background="@color/dark_gray"
-            android:drawableTop="@drawable/arrow_up"
-            android:fontFamily="sans-serif"
-            android:gravity="center"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            tools:ignore="MissingConstraints,Suspicious0dp"/>
+                android:id="@+id/scan_button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="8dp"
+                android:text="@string/scan_rfid"
+                android:textColor="@color/white"
+                android:textColorHighlight="@color/dark_gray"
+                android:backgroundTint="@color/dark_gray"
+                android:onClick="openScanRfidActivity"/>
 
         <Button
-            android:id="@+id/scan_button"
-            style="@style/Widget.AppCompat.Button.Borderless"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="2dp"
-            android:height="60dp"
-            android:background="@color/light_gray"
-            android:fontFamily="sans-serif"
-            android:insetTop="0dp"
-            android:insetBottom="0dp"
-            android:paddingLeft="40dp"
-            android:paddingTop="0dp"
-            android:paddingRight="40dp"
-            android:paddingBottom="0dp"
-            android:text="@string/scan_rfid"
-            android:textAlignment="textStart"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-            android:textColor="@color/black"
-            android:textSize="24sp"
-            app:backgroundTint="@color/light_gray"
-            app:rippleColor="@color/black" />
-
-        <Button
-            android:id="@+id/app_info"
-            style="@style/Widget.AppCompat.Button.Borderless"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="2dp"
-            android:height="60dp"
-            android:background="@color/light_gray"
-            android:fontFamily="sans-serif"
-            android:insetTop="0dp"
-            android:insetBottom="0dp"
-            android:paddingLeft="40dp"
-            android:paddingTop="0dp"
-            android:paddingRight="40dp"
-            android:paddingBottom="0dp"
-            android:text="@string/info"
-            android:textAlignment="textStart"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-            android:textColor="@color/black"
-            android:textColorHighlight="@color/light_gray"
-            android:textColorLink="@color/black"
-            android:textSize="24sp"
-            app:backgroundTint="@color/light_gray"
-            app:rippleColor="@color/black" />
+                android:id="@+id/app_info"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="8dp"
+                android:text="@string/info"
+                android:textColor="@color/white"
+                android:textColorHighlight="@color/dark_gray"
+                android:backgroundTint="@color/dark_gray"
+                android:onClick="openInfoActivity"/>
 
     </LinearLayout>
 
