--- a/BioMFA_Mobile/app/src/main/res/layout/activity_show_data.xml
+++ b/BioMFA_Mobile/app/src/main/res/layout/activity_show_data.xml
@@ -7,17 +7,17 @@
     android:background="@color/white">
 
     <TextView
-        android:id="@+id/data_textview"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAlignment="center"
-        android:textColor="#000000"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/return_button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.397" />
+            android:id="@+id/data_textview"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:textColor="#000000"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toTopOf="@+id/return_button"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.397"/>
 
     <TextView
         android:id="@+id/tag_type_textview"
