--- a/BioMFA_Mobile/app/src/main/res/layout/activity_type_code.xml
+++ b/BioMFA_Mobile/app/src/main/res/layout/activity_type_code.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:background="@color/white"
-              android:orientation="vertical"
-              android:gravity="center"
-              android:padding="16dp">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                                                   android:layout_width="match_parent"
+                                                   android:layout_height="match_parent"
+                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
+                                                   android:background="@color/white"
+                                                   android:padding="16dp">
 
     <TextView
             android:id="@+id/type_code_text"
@@ -13,31 +12,138 @@
             android:layout_height="wrap_content"
             android:text="Type code"
             android:textColor="@color/black"
-            android:textSize="24sp" />
+            android:textSize="24sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/guideline" android:layout_marginBottom="32dp"/>
+
+    <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_begin="276dp"/>
 
     <EditText
-            android:id="@+id/code_input"
-            android:layout_width="226dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:hint="Type code"
+            android:id="@+id/code_input1"
+            android:layout_width="40dp"
+            android:layout_height="50dp"
+            android:hint="0"
             android:textColor="@color/black"
             android:inputType="number"
-            android:maxLength="6"
+            android:maxLength="1"
             android:textSize="20sp"
-            android:textColorHighlight="@color/dark_gray"
-            android:textColorLink="@color/dark_gray"/>
+            android:gravity="center"
+            android:textCursorDrawable="@null"
+            app:layout_constraintTop_toBottomOf="@id/guideline"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/code_input2"
+            android:layout_marginEnd="6dp"
+            android:background="@drawable/rounded_gray_background" />
+
+    <EditText
+            android:id="@+id/code_input2"
+            android:layout_width="40dp"
+            android:layout_height="50dp"
+            android:hint="0"
+            android:textColor="@color/black"
+            android:inputType="number"
+            android:maxLength="1"
+            android:textSize="20sp"
+            android:gravity="center"
+            android:textCursorDrawable="@null"
+            app:layout_constraintTop_toBottomOf="@id/guideline"
+            app:layout_constraintStart_toEndOf="@id/code_input1"
+            app:layout_constraintEnd_toStartOf="@id/code_input3"
+            android:layout_marginStart="6dp"
+            android:layout_marginEnd="6dp"
+            android:background="@drawable/rounded_gray_background" />
+
+    <EditText
+            android:id="@+id/code_input3"
+            android:layout_width="40dp"
+            android:layout_height="50dp"
+            android:hint="0"
+            android:textColor="@color/black"
+            android:inputType="number"
+            android:maxLength="1"
+            android:textSize="20sp"
+            android:gravity="center"
+            android:textCursorDrawable="@null"
+            app:layout_constraintTop_toBottomOf="@id/guideline"
+            app:layout_constraintStart_toEndOf="@id/code_input2"
+            app:layout_constraintEnd_toStartOf="@id/code_input4"
+            android:layout_marginStart="6dp"
+            android:layout_marginEnd="6dp"
+            android:background="@drawable/rounded_gray_background" />
+
+    <EditText
+            android:id="@+id/code_input4"
+            android:layout_width="40dp"
+            android:layout_height="50dp"
+            android:hint="0"
+            android:textColor="@color/black"
+            android:inputType="number"
+            android:maxLength="1"
+            android:textSize="20sp"
+            android:gravity="center"
+            android:textCursorDrawable="@null"
+            app:layout_constraintTop_toBottomOf="@id/guideline"
+            app:layout_constraintStart_toEndOf="@id/code_input3"
+            app:layout_constraintEnd_toStartOf="@id/code_input5"
+            android:layout_marginStart="6dp"
+            android:layout_marginEnd="6dp"
+            android:background="@drawable/rounded_gray_background" />
+
+    <EditText
+            android:id="@+id/code_input5"
+            android:layout_width="40dp"
+            android:layout_height="50dp"
+            android:hint="0"
+            android:textColor="@color/black"
+            android:inputType="number"
+            android:maxLength="1"
+            android:textSize="20sp"
+            android:gravity="center"
+            android:textCursorDrawable="@null"
+            app:layout_constraintTop_toBottomOf="@id/guideline"
+            app:layout_constraintStart_toEndOf="@id/code_input4"
+            app:layout_constraintEnd_toStartOf="@id/code_input6"
+            android:layout_marginStart="6dp"
+            android:layout_marginEnd="6dp"
+            android:background="@drawable/rounded_gray_background" />
+
+    <EditText
+            android:id="@+id/code_input6"
+            android:layout_width="40dp"
+            android:layout_height="50dp"
+            android:hint="0"
+            android:textColor="@color/black"
+            android:inputType="number"
+            android:maxLength="1"
+            android:textSize="20sp"
+            android:gravity="center"
+            android:textCursorDrawable="@null"
+            app:layout_constraintTop_toBottomOf="@id/guideline"
+            app:layout_constraintStart_toEndOf="@id/code_input5"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginStart="6dp"
+            android:layout_marginEnd="6dp"
+            android:background="@drawable/rounded_gray_background" />
 
     <Button
             android:id="@+id/next_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
             android:text="Next"
             android:textSize="20sp"
             android:textColor="@color/white"
             android:textColorHighlight="@color/dark_gray"
             android:backgroundTint="@color/dark_gray"
-            android:onClick="onNextButtonClick" />
+            android:onClick="onNextButtonClick"
+            app:layout_constraintTop_toBottomOf="@id/code_input1"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="32dp"/>
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
