--- a/BioMFA_Mobile/app/src/main/res/layout/activity_type_code.xml
+++ b/BioMFA_Mobile/app/src/main/res/layout/activity_type_code.xml
@@ -135,12 +135,11 @@
             android:id="@+id/next_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Next"
+            android:text="@string/next"
             android:textSize="20sp"
             android:textColor="@color/white"
             android:textColorHighlight="@color/dark_gray"
             android:backgroundTint="@color/dark_gray"
-            android:onClick="onNextButtonClick"
             app:layout_constraintTop_toBottomOf="@id/code_input1"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
