--- a/BioMFA_Mobile/app/src/main/res/layout/activity_show_data.xml
+++ b/BioMFA_Mobile/app/src/main/res/layout/activity_show_data.xml
@@ -20,16 +20,16 @@
             app:layout_constraintVertical_bias="0.397"/>
 
     <TextView
-        android:id="@+id/tag_type_textview"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="#000000"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/data_textview"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.702" />
+            android:id="@+id/tag_type_textview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#000000"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toTopOf="@+id/data_textview"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.702" android:gravity="center_horizontal"/>
 
     <Button
         android:id="@+id/return_button"
